--- a/saque/index.html
+++ b/saque/index.html
@@ -1,33 +1,170 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transferência via Pix - Suitpay</title>
+    <title>Enviar PIX - Suitpay Gateway</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f7f7f7;
+            margin: 0;
+        }
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            max-width: 400px;
+            width: 100%;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        .form-group input, .form-group select {
+            width: calc(100% - 20px);
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #28a745;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+        .error {
+            color: red;
+            font-size: 0.875em;
+            display: none;
+        }
+        .success-message, .error-message {
+            display: none;
+            padding: 10px;
+            margin-top: 10px;
+            border-radius: 4px;
+        }
+        .success-message {
+            background-color: #d4edda;
+            color: #155724;
+        }
+        .error-message {
+            background-color: #f8d7da;
+            color: #721c24;
+        }
+    </style>
 </head>
 <body>
-    <h1>Transferência via Pix</h1>
-    <form id="pixForm">
-        <label for="key">Chave Pix:</label>
-        <input type="text" id="key" name="key" required><br><br>
-        
-        <label for="typeKey">Tipo de Chave:</label>
-        <select id="typeKey" name="typeKey">
-            <option value="document">CPF/CNPJ</option>
-            <option value="phoneNumber">Número de Telefone</option>
-            <option value="email">Email</option>
-            <option value="randomKey">Chave Aleatória</option>
-            <option value="paymentCode">Código de Pagamento</option>
-        </select><br><br>
+    <div class="container">
+        <h1>Enviar PIX</h1>
+        <form id="pixForm">
+            <div class="form-group">
+                <label for="pixType">Tipo de Chave PIX</label>
+                <select id="pixType" name="pixType" onchange="showPixField()" required>
+                    <option value="">Selecione</option>
+                    <option value="document">CPF/CNPJ</option>
+                    <option value="phoneNumber">Celular</option>
+                    <option value="email">Email</option>
+                </select>
+            </div>
+            <div class="form-group" id="cpfField" style="display:none;">
+                <label for="cpf">CPF/CNPJ</label>
+                <input type="text" id="cpf" name="cpf" placeholder="Digite seu CPF/CNPJ">
+            </div>
+            <div class="form-group" id="emailField" style="display:none;">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Digite seu email">
+            </div>
+            <div class="form-group" id="phoneField" style="display:none;">
+                <label for="phone">Celular</label>
+                <input type="text" id="phone" name="phone" placeholder="Digite seu celular">
+            </div>
+            <button type="submit">Enviar PIX</button>
+        </form>
+        <div id="successMessage" class="success-message">PIX enviado com sucesso!</div>
+        <div id="errorMessage" class="error-message"></div>
+    </div>
 
-        <label for="documentValidation">Validação de Documento (opcional):</label>
-        <input type="text" id="documentValidation" name="documentValidation"><br><br>
+    <script>
+        function showPixField() {
+            const pixType = document.getElementById('pixType').value;
+            document.getElementById('cpfField').style.display = 'none';
+            document.getElementById('emailField').style.display = 'none';
+            document.getElementById('phoneField').style.display = 'none';
+            
+            if (pixType === 'document') {
+                document.getElementById('cpfField').style.display = 'block';
+            } else if (pixType === 'email') {
+                document.getElementById('emailField').style.display = 'block';
+            } else if (pixType === 'phoneNumber') {
+                document.getElementById('phoneField').style.display = 'block';
+            }
+        }
 
-        <button type="submit">Efetuar Transferência</button>
-    </form>
+        document.getElementById('pixForm').addEventListener('submit', function(event) {
+            event.preventDefault();
 
-    <div id="result"></div>
+            const pixType = document.getElementById('pixType').value;
+            let key = '';
 
-    <script src="pix.js"></script>
+            if (pixType === 'document') {
+                key = document.getElementById('cpf').value;
+            } else if (pixType === 'email') {
+                key = document.getElementById('email').value;
+            } else if (pixType === 'phoneNumber') {
+                key = document.getElementById('phone').value;
+            }
+
+            const data = {
+                key: key,
+                typeKey: pixType,
+                value: 0.05  // Valor fixo de R$0,05
+            };
+
+            fetch('process_pix2.php', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(data)
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    document.getElementById('successMessage').style.display = 'block';
+                    document.getElementById('errorMessage').style.display = 'none';
+                } else {
+                    document.getElementById('errorMessage').textContent = data.message;
+                    document.getElementById('errorMessage').style.display = 'block';
+                    document.getElementById('successMessage').style.display = 'none';
+                }
+            })
+            .catch(error => {
+                document.getElementById('errorMessage').textContent = 'Erro ao enviar PIX. Tente novamente.';
+                document.getElementById('errorMessage').style.display = 'block';
+                document.getElementById('successMessage').style.display = 'none';
+            });
+        });
+    </script>
 </body>
 </html>
